# lib/rest/rest.go
@@ -3,38 +3,26 @@ package rest
 import (
 	"encoding/json"
 	"net/http"
-
-	"github.com/rs/zerolog/log"
 )
 
-// APIMessage is a struct for generic JSON response.
-type APIMessage struct {
+// Message is a struct for generic JSON response.
+type Message struct {
 	Message string `json:"message,omitempty"`
 	Status  int    `json:"status,omitempty"`
 }
 
+// DecodeError returns unsuccessful JSON error message.
 func DecodeError(w http.ResponseWriter, r *http.Request, err error, httpCode int) {
-	log.Error().
-		Err(err).
-		Stack().
-		Str("method", r.Method).
-		Str("url", r.URL.String()).
-		Str("agent", r.UserAgent()).
-		Str("referer", r.Referer()).
-		Str("proto", r.Proto).
-		Str("remote_address", r.RemoteAddr).
-		Int("status", httpCode).
-		Msg(err.Error())
-
 	w.WriteHeader(httpCode)
 
-	apiError := &APIMessage{err.Error(), httpCode}
-	if err := json.NewEncoder(w).Encode(apiError); err != nil {
+	errorMessage := &Message{err.Error(), httpCode}
+	if err := json.NewEncoder(w).Encode(errorMessage); err != nil {
 		return
 	}
 }
 
-func EncodeJSON(w http.ResponseWriter, httpCode int, dest interface{}) {
+// JSON returns a successful JSON message.
+func JSON(w http.ResponseWriter, httpCode int, dest interface{}) {
 	w.WriteHeader(httpCode)
 	if err := json.NewEncoder(w).Encode(dest); err != nil {
 		return
